--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,13 @@
     margin-bottom: 20px;
 }
 
+.serverLink {
+    position: relative;
+}
+.serverLink a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height:100%;
+    width: 100%;
+}
