--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,9 @@
     height:100%;
     width: 100%;
 }
+
+.serverInfo {
+    margin-top: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
