--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,9 @@
     margin-left: 200px;
     margin-right: 200px;
 }
+
+.icon {
+    border-radius: 20%;
+    width: 150px;
+    height: 150px; 
+}
