--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,14 @@
     width: 100%;
 }
 
-.tag{
+.icon {
+    border-radius: 20%;
+    width: 100px;
+    height: 100px;
+    margin-top: 15px;
+}
+
+.tag {
     font-weight: bold;
 }
 
